@@ -21,6 +21,8 @@ exist; using it can easily result in data loss.
 
 [[git-annex]](1)
 
+[[git-annex-setkey]](1)
+
 # AUTHOR
 
 Joey Hess <id@joeyh.name>
