@@ -9,6 +9,9 @@ git-annex (5.20150618) UNRELEASED; urgency=medium
   * assistant: Fix ANNEX_SHELL_DIR written to ~/.ssh/authorized_keys 
     in local pairing to be the absolute path to the repository, not "."
     This was a reversion caused by the relative path changes in 5.20150113.
+  * Brought back the setkey plumbing command that was removed in 2011, since
+    we found a use case for it. Note that the command's syntax was changed
+    for consistency.
 
  -- Joey Hess <id@joeyh.name>  Thu, 02 Jul 2015 12:31:14 -0400
 
